fix issues with visibility

--- a/src/blocks/home/ProductsPreview/ProductsPreview.module.css
+++ b/src/blocks/home/ProductsPreview/ProductsPreview.module.css
@@ -62,8 +62,8 @@
 
 .title_product {
   /* margin: 0; */
-  width: 115px;
-  height: 24px;
+  width: 315px;
+  height: auto;
   margin-top: 10.82px;
   margin-left: 18.91px;
 }
